# PromptTrail

./: .clinerules  .coverage  .envrc_sample  .gitignore  .readthedocs.yaml  CONTRIBUTING.md  LICENCE  README.md  conftest.py  coverage.xml  package-release.sh  pyproject.toml
.github/actions/extract_error/: action.yml  extract_error.py
.github/workflow/: ci.yml
.github/workflows/: auto-code-review.yml  doc.yml  extract_error.py  release.yml  test-and-release.yml  test.yml
design-docs/: end-conversation-tool.md  event-and-event_handling.md  subroutine.md  template-model-override.md
docs/: .buildinfo  conf.py  genindex.html  index.html  index.rst  modules.rst  objects.inv  prompttrail.agent.hook.html  prompttrail.agent.hooks.rst  prompttrail.agent.html  prompttrail.agent.runner.html  prompttrail.agent.template.html  prompttrail.agent.templates.rst  prompttrail.core.rst  prompttrail.flow.hooks.html  prompttrail.flow.html  prompttrail.flow.runner.html  prompttrail.flow.templates.html  prompttrail.html  prompttrail.models.rst  prompttrail.provider.html  prompttrail.providers.html  prompttrail.rst  py-modindex.html  pydoc-markdown.yml  quickstart-agents.md  quickstart-core.md  quickstart-models.md  quickstart-preparation.md  quickstart.md  search.html  searchindex.js
docs/.doctrees/: environment.pickle  index.doctree  prompttrail.doctree  prompttrail.flow.doctree  prompttrail.flow.hooks.doctree  prompttrail.flow.runner.doctree  prompttrail.flow.templates.doctree  prompttrail.providers.doctree
docs/_modules/: index.html
docs/_modules/prompttrail/: cache.html  core.html  error.html  mock.html  util.html
docs/_modules/prompttrail/agent/: core.html  runner.html  template.html  user_interaction.html
docs/_modules/prompttrail/flow/: core.html
docs/_modules/prompttrail/provider/: google_cloud.html  openai.html
docs/_modules/prompttrail/providers/: google_cloud.html  openai.html
docs/_sources/: prompttrail.agent.rst.txt  prompttrail.agent.runner.rst.txt  prompttrail.flow.templates.rst.txt  prompttrail.provider.rst.txt  prompttrail.rst.txt
docs/source/: conf.py  index.rst  prompttrail.agent.hook.rst  prompttrail.agent.hooks.rst  prompttrail.agent.rst  prompttrail.agent.session_transformers.rst  prompttrail.agent.subroutine.rst  prompttrail.agent.template.rst  prompttrail.agent.templates.rst  prompttrail.agent.tools.rst  prompttrail.core.rst  prompttrail.models.rst  prompttrail.rst  quickstart-agents.md  quickstart-core.md  quickstart-models.md  quickstart-preparation.md  quickstart.md
docs/sources/: index.md
docs/sphinx/: conf.py  index.rst  prompttrail.agent.rst  prompttrail.agent.template.rst  prompttrail.flow.hooks.rst  prompttrail.flow.rst  prompttrail.flow.runner.rst  prompttrail.providers.rst  prompttrail.rst
examples/: README.md
examples/agent/: create_unit_test.py  fermi_problem.py  fix_markdown.py  llm_bias_benchmark.py  llm_bias_benchmark_using_subroutine.py  math_teacher.py  questions.json5  subroutine_example.py  subroutine_tool_example.py  todo_app.py  weather_forecast.py  weather_forecast_api.py
examples/agent/faq-bot/: main.py
examples/dogfooding/: README.md  auto_code_review.py  chat.py  coding_agent.py  commit_with_auto_generated_comment.py  create_commit_comment.py  create_docstring.py  create_unit_test.py  dogfooding_tools.py  file_level_improver.py  fix_comment.py  fix_markdown.py  quickstart_writer.py  release_note_writer.py  snippet_for_readme_image.py
examples/dogfooding/utils/: load_all_important_files.py
examples/flow/: example_fermi_problem.py
examples/model/: google.py  mock.py  openai.py
examples/models/: anthropic_example.py  example_google.py  example_mock.py  example_openai.py  google.py  local_llm.py  mock.py  openai.py  stream.py
examples/provider/: google.py  mock.py  stream.py
examples/tests/: test_dogfooding_tools.py
proposal-docs/: api_cost_tracking_proposal.md  multi-turn-swe-benchmark.md  typescript-flow-control.md  typescript-implementation.md  typescript-modern-implementation.md
src/prompttrail/: cache.py  const.py  core.py  error.py  mock.py  util.py
src/prompttrail/agent/: README.md  __init__.py  core.py  runner.py  runners.py  squash_strategy.py  template.py  tool.py  tools.py  user_interaction.py  user_interface.py
src/prompttrail/agent/hook/: __init__.py  code.py  core.py
src/prompttrail/agent/hooks/: __init__.py  _code.py  _core.py
src/prompttrail/agent/runner/: core.py
src/prompttrail/agent/session_transformers/: __init__.py  _code.py  _core.py
src/prompttrail/agent/subroutine/: __init__.py  _base.py  session_init_strategy.py  squash_strategy.py
src/prompttrail/agent/template/: __init__.py  control.py  core.py  openai.py
src/prompttrail/agent/templates/: __init__.py  _base.py  _control.py  _core.py  _tool.py  anthropic.py  openai.py  subroutine.py
src/prompttrail/agent/tools/: __init__.py  _base.py  _subroutine.py  builtin.py  py.typed
src/prompttrail/core/: __init__.py  _core.py  cache.py  const.py  errors.py  mocks.py  utils.py
src/prompttrail/flow/: core.py  templates.py
src/prompttrail/models/: __init__.py  anthropic.py  google.py  google_cloud.py  openai.py  transformers.py
src/prompttrail/provider/: google_cloud.py  openai.py
src/prompttrail/providers/: google_cloud.py  openai.py
tests/: __init__.py  test_cache.py  test_core.py  test_fail.py  test_hook.py  test_hook_code.py  test_metadata.py  test_mock.py  test_openai.py  test_print.py  test_tool.py
tests/agent/: test_api_runner.py  test_core.py  test_examples.py  test_runner.py  test_tool.py
tests/agent/hook/: test_code.py  test_hook.py
tests/agent/hooks/: test_code.py  test_hook.py
tests/agent/templates/: test_subroutine.py  test_tooling_templates.py
tests/agent/tools/: __init__.py  test_builtin_tools.py  test_dogfooding_tools.py  test_subroutine.py
tests/models/: __init__.py  test_anthropic.py  test_google.py  test_mock.py  test_openai.py  test_transformers.py  test_utils.py
tests/provider/: test_google.py  test_mock.py  test_openai.py
ts/: package.json  pnpm-lock.yaml  tsconfig.json
(+13 files in other folders)
